// This file defines some common data models,
// which are useful in a lot of scenarios.
syntax = "proto3";

package nortoo.usms.common.v1.types;

option go_package = "github.com/nortoo/usms/pkg/proto/common/v1/types;types";

// TimeModel is the shared model for time fields.
message TimeModel {
  int64 created_at = 1;
  int64 updated_at = 2;
}

// Pagination is the essential query parameter.
message Pagination {
  int32 page = 1;
  int32 page_size = 2;
}

// PaginationResp contains the common fields when returning a list.
message PaginationResp {
  int32 page = 1;
  int64 total = 2;
}